[gd_scene load_steps=15 format=3 uid="uid://c3uvgrfbv2vk0"]

[ext_resource type="Script" path="res://editor/editor.gd" id="1_1x12t"]
[ext_resource type="Script" path="res://editor/camera.gd" id="2_v3yqy"]
[ext_resource type="Resource" uid="uid://bhjllf7uya3y2" path="res://resources/paths/Paths.tres" id="3_270lp"]
[ext_resource type="Script" path="res://addons/wave-function-collapse/wfc/node.gd" id="4_0by6m"]
[ext_resource type="Script" path="res://editor/ui.gd" id="8_oura0"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_m4nre"]
sky_top_color = Color(0.398306, 0.468266, 0.565609, 1)
sky_horizon_color = Color(0.649576, 0.659317, 0.674652, 1)
sky_energy_multiplier = 0.95
ground_horizon_color = Color(0.649576, 0.659317, 0.674652, 1)

[sub_resource type="Sky" id="Sky_3xjnd"]
sky_material = SubResource("ProceduralSkyMaterial_m4nre")

[sub_resource type="Environment" id="Environment_1r10t"]
background_mode = 2
sky = SubResource("Sky_3xjnd")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Compositor" id="Compositor_b2qlf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7e77o"]
transparency = 1
cull_mode = 2
depth_draw_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0, 0.587667, 0.86, 0.686275)

[sub_resource type="PlaneMesh" id="PlaneMesh_280yy"]
size = Vector2(4000, 4000)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7nfwd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3v1rh"]

[sub_resource type="Theme" id="Theme_7jehx"]
default_font_size = 10
Button/styles/focus = SubResource("StyleBoxEmpty_7nfwd")
LineEdit/styles/focus = SubResource("StyleBoxEmpty_3v1rh")

[node name="Editor" type="Node3D"]
script = ExtResource("1_1x12t")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1r10t")
compositor = SubResource("Compositor_b2qlf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
shadow_enabled = true

[node name="Generator" type="Node3D" parent="."]
script = ExtResource("4_0by6m")
tileset = ExtResource("3_270lp")
cell_size = 2.0

[node name="Camera" type="Camera3D" parent="."]
current = true
script = ExtResource("2_v3yqy")

[node name="EditLayerPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_7e77o")
cast_shadow = 0
ignore_occlusion_culling = true
mesh = SubResource("PlaneMesh_280yy")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_filter = 1
theme = SubResource("Theme_7jehx")
script = ExtResource("8_oura0")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -219.0
offset_bottom = 242.0
grow_horizontal = 0
mouse_filter = 0
mouse_force_pass_scroll_events = false
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="UI/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/MarginContainer2"]
layout_mode = 2

[node name="Tabs" type="TabContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tab_focus_mode = 0

[node name="Options" type="PanelContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs"]
layout_mode = 2
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="Panel" type="Panel" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options"]
layout_mode = 2

[node name="SeedOption" type="MarginContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 1

[node name="HFlowContainer" type="HFlowContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/SeedOption"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/SeedOption/HFlowContainer"]
layout_mode = 2
text = "Seed"

[node name="SpinBox" type="SpinBox" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/SeedOption/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 0.0
rounded = true
allow_greater = true
allow_lesser = true
alignment = 2
update_on_text_changed = true

[node name="DimensionsOption" type="MarginContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Grid Dimensions"

[node name="HFlowContainer" type="HFlowContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption/VBoxContainer"]
layout_mode = 2

[node name="x" type="SpinBox" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption/VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 5.0
update_on_text_changed = true
prefix = "x:"

[node name="y" type="SpinBox" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption/VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
update_on_text_changed = true
prefix = "y:"

[node name="z" type="SpinBox" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption/VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 5.0
update_on_text_changed = true
prefix = "z:"

[node name="CellSizeOption" type="MarginContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HFlowContainer" type="HFlowContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/CellSizeOption"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/CellSizeOption/HFlowContainer"]
layout_mode = 2
text = "Cell Size"

[node name="SpinBox" type="SpinBox" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/CellSizeOption/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0
alignment = 2
update_on_text_changed = true
suffix = "m"

[node name="AnimateOption" type="MarginContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HFlowContainer" type="HFlowContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/AnimateOption"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/AnimateOption/HFlowContainer"]
layout_mode = 2
text = "Animate"

[node name="CheckButton" type="CheckButton" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/AnimateOption/HFlowContainer"]
layout_mode = 2
button_pressed = true
text = "
"

[node name="AnimateSpeedOption" type="MarginContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HFlowContainer" type="HFlowContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/AnimateSpeedOption"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/AnimateSpeedOption/HFlowContainer"]
layout_mode = 2
text = "Animation Speed"

[node name="HSlider" type="HSlider" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/AnimateSpeedOption/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0
scrollable = false

[node name="Tiles" type="PanelContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Panel" type="Panel" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Tiles"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Tiles"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Tiles/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Tiles/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Tiles/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TileList" type="ItemList" parent="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Tiles/MarginContainer/VBoxContainer/ScrollContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
allow_search = false
fixed_icon_size = Vector2i(10, 10)

[node name="Clear" type="Button" parent="UI/MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="GenerateButton" type="Button" parent="UI/MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="MarginContainer2" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="Panel" type="Panel" parent="UI/MarginContainer2/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer2/PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="ModeLabel" type="Label" parent="UI/MarginContainer2/PanelContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "View Mode"

[node name="MarginContainer2" type="MarginContainer" parent="UI/MarginContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="Panel" type="Panel" parent="UI/MarginContainer2/PanelContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer2/PanelContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer2/PanelContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="TilePosLabel" type="Label" parent="UI/MarginContainer2/PanelContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "(3,4,5)"

[connection signal="animate_flag_updated" from="UI" to="." method="_on_ui_animate_flag_updated"]
[connection signal="animate_speed_updated" from="UI" to="." method="_on_ui_animate_speed_updated"]
[connection signal="cell_size_updated" from="UI" to="." method="_on_ui_cell_size_updated"]
[connection signal="dimension_updated" from="UI" to="." method="_on_ui_dimension_updated"]
[connection signal="generate_button_pressed" from="UI" to="." method="_on_ui_generate_button_pressed"]
[connection signal="gui_input" from="UI" to="UI" method="_on_gui_input"]
[connection signal="seed_updated" from="UI" to="." method="_on_ui_seed_updated"]
[connection signal="value_changed" from="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/SeedOption/HFlowContainer/SpinBox" to="UI" method="_on_seed_value_changed"]
[connection signal="value_changed" from="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption/VBoxContainer/HFlowContainer/x" to="UI" method="_on_dimension_x_value_changed"]
[connection signal="value_changed" from="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption/VBoxContainer/HFlowContainer/y" to="UI" method="_on_dimension_y_value_changed"]
[connection signal="value_changed" from="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/DimensionsOption/VBoxContainer/HFlowContainer/z" to="UI" method="_on_dimension_z_value_changed"]
[connection signal="value_changed" from="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/CellSizeOption/HFlowContainer/SpinBox" to="UI" method="_on_cell_size_value_changed"]
[connection signal="toggled" from="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/AnimateOption/HFlowContainer/CheckButton" to="UI" method="_on_animate_flag_value_changed"]
[connection signal="value_changed" from="UI/MarginContainer/MarginContainer2/VBoxContainer/Tabs/Options/VBoxContainer/AnimateSpeedOption/HFlowContainer/HSlider" to="UI" method="_set_animate_speed_value"]
[connection signal="pressed" from="UI/MarginContainer/MarginContainer2/VBoxContainer/Clear" to="." method="_on_ui_clear_pressed"]
[connection signal="pressed" from="UI/MarginContainer/MarginContainer2/VBoxContainer/GenerateButton" to="UI" method="_on_generate_button_pressed"]
